# life-wars

./: .gitignore  Cargo.toml  README.md
benches/: life-bench.rs
src/: context.rs  default_patterns.rs  draw.rs  lib.rs  life.rs  main.rs  pattern.rs  pattern_view.rs  scene.rs  skin.rs  storage.rs  ui.rs  viewer.rs
src/life/: algo.rs  basic.rs  cached.rs  file_format.rs  iter.rs  pattern_lib.rs  patterns.rs  pos.rs  rand.rs  rule.rs  save.rs  sparse.rs
src/life/algo/: basic.rs  cached.rs  hash.rs  quad.rs  quick.rs  shader.rs  sparse.rs
src/life/file_format/: apgcode.rs  plaintext.rs  rle.rs
src/pattern/: classify.rs  identify.rs
src/scene/: editor.rs  game_options.rs  gameplay.rs  main_menu.rs  menu.rs
src/ui/: popup.rs  toolbar.rs  window.rs
tests/: life_tests.rs
