[package]
name = "life-io"
version = "0.1.0"
edition = "2024"
default-run = "life-io"

[dependencies]
directories = "6.0.0"
fxhash = "0.2.1"
macroquad = "0.4.14"
quad-rand = "0.2.3"
ron = "0.9.0"
serde = { version = "1.0.216", features = ["derive"] }

[profile.release-with-debug]
inherits = "release"
debug = true
